--- a/package.json
+++ b/package.json
@@ -5,19 +5,27 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "queue": "nodemon src/queue.js"
+    "queue": "nodemon src/queue.js",
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "postest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "license": "MIT",
   "devDependencies": {
+    "@sucrase/jest-plugin": "^2.0.0",
+    "@types/jest": "^25.2.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
     "sequelize-cli": "^5.5.1",
-    "sucrase": "^3.13.0"
+    "sqlite3": "^4.2.0",
+    "sucrase": "^3.13.0",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "@sentry/node": "5.15.4",
